--- a/API-.Net Core/courses/api-courses/api-courses.csproj
+++ b/API-.Net Core/courses/api-courses/api-courses.csproj
@@ -5,5 +5,14 @@
     <RootNamespace>api_courses</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>api-courses.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.1.4" />
+  </ItemGroup>
+
 
 </Project>
